--- a/0x0A-i18n/templates/0-index.html
+++ b/0x0A-i18n/templates/0-index.html
@@ -2,9 +2,9 @@
 
 <html dir="ltr" lang="en">
   <head>
-    <title>{{ title }}</title>
+    <title>Welcome to Holberton</title>
   </head>
   <body>
-    <h1>{{ header }}</h1>
+    <h1>Hello world</h1>
   </body>
 </htm>
