--- a/0x0A-i18n/templates/1-index.html
+++ b/0x0A-i18n/templates/1-index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 
-<html dir="ltr" lang={{ lang>
+<html dir="ltr" lang="en">
   <head>
-    <title>Welcome to Holberton</title>
+    <title>{{ title }}</title>
   </head>
   <body>
-    <h1>Hello world</h1>
+    <h1>{{ header }}</h1>
   </body>
 </htm>
